fixed spacing on about us page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -302,11 +302,15 @@ a {
 
 .description{
     color: white;
+    padding-right:60px;
 }
 
 .about-content{
     flex: 40%;
-    padding: 40px;
+    padding-top: 40px;
+    padding-bottom:40px;
+    padding-left:40px;
+    padding-right:20px;
     
 }
 
